<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FantasyFinance</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="finance">Fantasy Finance</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="attempts">Attempts</string>
    <string name="login">Login</string>
    <string name="status">Status</string>
    <string name="companyName">Company Name</string>
    <string name="update">Update</string>
    <string name="register"><u>Sign Up For Fantasy Finance!!</u></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="forgot">Forgot Password!!</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Login</string>
    <string name="logout">Logout</string>
    <string name="tagline">tagline</string>
    <string name="title_activity_tagline">Tagline</string>
    <string name="title_activity_register">Register</string>
    <string name="email">Email</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_followed_stocks">FollowedStocks</string>
    <string name="title_activity_search_stocks">SearchStocks</string>
    <string name="title_activity_predict_stocks">PredictStocks</string>
    <string name="title_activity_stock_info">StockInfo</string>
	<string name="favorites">Favorites</string>
	<string name="predictions">Predictions</string>
</resources>
