<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4c66a4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <EditText
        android:id="@+id/registerpwd"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/registerUsername"
        android:layout_below="@+id/registerUsername"
        android:layout_marginTop="30dp"
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:hint="@string/password"
        android:paddingLeft="10dp" 
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"/>
    
    <EditText
        android:id="@+id/emailID"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/registerpwd"
        android:layout_below="@+id/registerpwd"
        android:layout_marginTop="30dp"
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:hint="@string/email"
        android:paddingLeft="10dp" 
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF"/>

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:hint="@string/username"
        android:paddingLeft="10dp" 
        android:textColorHint="#FFFFFF"/>

       <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/emailID"
        android:layout_alignRight="@+id/emailID"
        android:layout_below="@+id/emailID"
        android:layout_marginTop="18dp"
        android:background="@drawable/buttonshape"
        android:onClick="onRegisterClick"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="serif" />
</RelativeLayout>