<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4c66a4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:onClick="onRegisterClick"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:textStyle="normal"
        android:typeface="serif" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editText2"
        android:background="@drawable/buttonshape"
        android:onClick="onForgotPassword"
        android:src="@android:drawable/ic_menu_help" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/editText1"
        android:layout_centerVertical="true"
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColorHint="#C6C6C6" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/editText2"
        android:layout_alignLeft="@+id/textView3"
        android:layout_marginBottom="15dp"
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:hint="@string/username"
        android:paddingLeft="10dp"
        android:textColorHint="#C6C6C6" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="18dp"
        android:onClick="onLoginClick"
        android:text="@string/login"
        style="@style/button_gradient"/>
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_above="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:src="@drawable/finance" />

</RelativeLayout>